attic/old_tests/xml/validxml/raDec/goodradec1.xml.README
goodradec1.xml: OK ra, dec is 0, 90
