attic/old_tests/xml/invalidxml/raDec/baddec2.xml.README
baddec2.xml: BAD dec is 90.000872 -- range is -90.O to 90.0 inclusive
